Added usage of webclient to make rest call and removed usage of rest template

--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -5,6 +5,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-
-address.service.url = http://localhost:8081/addressservice/getaddress/{id}
+address.service.url = http://localhost:8081/addressservice
