--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -5,4 +5,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+
 address.service.url = http://localhost:8081/addressservice
+#addressRibbonClient.ribbon.listOfServers=http://localhost:8081,http://localhost:8082
+
+logging.level.org.springframework=DEBUG
