Added discovery service using eureka server. also register the eureka client with ds. Also implemented the load balancer at client side

--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -6,8 +6,13 @@ spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+server.port=8091
 
 address.service.url = http://localhost:8081/addressservice
 #addressRibbonClient.ribbon.listOfServers=http://localhost:8081,http://localhost:8082
 
 logging.level.org.springframework=DEBUG
+
+spring.application.name = EMPLOYEE_SERVICE
+
+eureka.instance.preferIpAddress=true
