--- a/address-service/src/main/resources/application.properties
+++ b/address-service/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.properties.hibernate.format_sql=true
 server.port=8081
 
 logging.level.org.springframework=DEBUG
+
+spring.application.name = ADDRESS_SERVICE
+
+eureka.instance.preferIpAddress=true
